# kde-inotify-survey

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  org.kde.inotify-survey.metainfo.xml
.reuse/: dep5
autotests/: CMakeLists.txt  entriestest.cpp
autotests/fixtures/proc/2/fdinfo/: 2
po/ar/: kde-inotify-survey.po
po/ast/: kde-inotify-survey.po
po/ca/: kde-inotify-survey.po
po/ca@valencia/: kde-inotify-survey.po
po/cs/: kde-inotify-survey.po
po/de/: kde-inotify-survey.po
po/en_GB/: kde-inotify-survey.po
po/eo/: kde-inotify-survey.po
po/es/: kde-inotify-survey.po
po/eu/: kde-inotify-survey.po
po/fi/: kde-inotify-survey.po
po/fr/: kde-inotify-survey.po
po/ga/: kde-inotify-survey.po
po/gl/: kde-inotify-survey.po
po/he/: kde-inotify-survey.po
po/hi/: kde-inotify-survey.po
po/hu/: kde-inotify-survey.po
po/ia/: kde-inotify-survey.po
po/id/: kde-inotify-survey.po
po/it/: kde-inotify-survey.po
po/ja/: kde-inotify-survey.po
po/ka/: kde-inotify-survey.po
po/ko/: kde-inotify-survey.po
po/lt/: kde-inotify-survey.po
po/lv/: kde-inotify-survey.po
po/nl/: kde-inotify-survey.po
po/nn/: kde-inotify-survey.po
po/pl/: kde-inotify-survey.po
po/pt/: kde-inotify-survey.po
po/pt_BR/: kde-inotify-survey.po
po/ro/: kde-inotify-survey.po
po/ru/: kde-inotify-survey.po
po/sa/: kde-inotify-survey.po
po/sk/: kde-inotify-survey.po
po/sl/: kde-inotify-survey.po
po/sv/: kde-inotify-survey.po
po/tr/: kde-inotify-survey.po
po/ug/: kde-inotify-survey.po
po/uk/: kde-inotify-survey.po
po/zh_CN/: kde-inotify-survey.po
po/zh_TW/: kde-inotify-survey.po
src/: CMakeLists.txt  Messages.sh
src/helper/: CMakeLists.txt  helper.cpp  helper.h  org.kde.kded.inotify.actions
src/kded/: CMakeLists.txt  inotify.json  kded.cpp  org.kde.kded.inotify.notifyrc
src/survey/: CMakeLists.txt  entries.cpp  entries.h  main.cpp
